<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wi-Fi Starter</string>
    <string name="settings_build_text">Build 0.5</string>
    <string name="menu_settings">Settings</string>
    <string name="next">Next ></string>
    <string name="done">Done</string>
    <string name="refresh">Refresh</string>
    <string name="go">Go</string>
    <string name="outofthebox">Out Of The Box</string>
    <string name="title_outofthebox_qrscanner">Scan SimpleLink QR Code</string>
    <string name="title_smartconfig">Device Configuration</string>
    <string name="title_devices">Devices</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_qrscanner">QRScannerActivity</string>
    <string name="title_activity_ap_mode">AP Provisioning</string>
    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
    <string name="smartconfig_start">Start</string>
    <string name="smartconfig_cancel">Cancel</string>
    <string name="smartconfig_network_name_text">Network Name</string>
    <string name="smartconfig_network_name_field">Network</string>
    <string name="smartconfig_network_pass_text">Password</string>
    <string name="smartconfig_network_pass_field">Password</string>
    <string name="smartconfig_device_name_text">Device Name</string>
    <string name="smartconfig_device_name_field">Name of the Device</string>
    <string name="smartconfig_device_name_explanation">This is the device name that will serve for discovery (optional)</string>
    <string name="smartconfig_key_text">Key</string>
    <string name="smartconfig_key_field">Device Password</string>
    <string name="settings_show_name_text">Show Device Name</string>
    <string name="settings_show_name_explanation">If checked, device name entry will be available on configuration screen</string>
    <string name="settings_open_devices_tab_text">Open in Devices List</string>
    <string name="settings_open_devices_tab_explanation">If checked, the application will start on \'Devices List\' tab</string>
    <string name="settings_show_password_text">Show SmartConfig Key</string>
    <string name="settings_ap_mode_text">Start AP Mode</string>
    <string name="settings_privacy_text">Privacy Policy</string>
    <string name="devices_recent_text">Recently Added</string>
    <string name="devices_list_text">Devices</string>
    <string name="ap_mode_page1_title">Step 1 &#8211; 3200 (3100 press next)</string>
    <string name="ap_mode_page2_title">Step 1 &#8211; 3100</string>
    <string name="ap_mode_page3_title">Step 2</string>
    <string name="ap_mode_page4_title">Step 3</string>
    <string name="ap_mode_page5_title">Step 4</string>
    <string name="ap_mode_page6_title">Step 5</string>
    <string name="ap_mode_page1_text1">Connect the provided jumper to short pin P58 and VCC.</string>
    <string name="ap_mode_page1_text2">Note: This will force the CC3200 into Access Point mode using default parameters and connect the USB cable to the Launchpad.</string>
    <string name="ap_mode_page2_text">Connect the provided USB cable.\nPress and hold switch SW1.\nWhile holding SW1 press and release switch SW3.\nRelease SW1 one second after releasing SW3.</string>
    <string name="ap_mode_page3_text">Open the WiFi settings on your device. Connect to network MySimpleLink-xxx. The letters xxx will vary between boards. Password is not needed.</string>
    <string name="ap_mode_page4_text1">Click on the link below.</string>
    <string name="ap_mode_page4_text2">The device will stream the on-board web pages to your web browser.</string>
    <string name="ap_mode_page4_link">http://MySimpleLink.net/setup.html</string>
    <string name="ap_mode_page5_text">Please enter your AP name and password and press \"Add Profile\".</string>
    <string name="ap_mode_page6_text_3200">CC3200 &#8211; Remove jumper and restart the board.</string>
    <string name="ap_mode_page6_text_3100">CC3100 &#8211; Restart the board.</string>
    <string name="ap_mode_page6_note">Note: If your phone and SimpleLink device are connected to the same network, the device will be shown in the devices tab.</string>
    <string name="title_activity_apmode">APModeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>