<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/ap_mode_page6_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ap_mode_page6_title"
        android:textSize="18sp" />
    
    <TextView
        android:id="@+id/ap_mode_page6_text_3200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ap_mode_page6_title"
        android:layout_alignParentLeft="true"
        android:layout_margin="20dp"
        android:text="@string/ap_mode_page6_text_3200"
        android:textSize="18sp" />
    
    <TextView
        android:id="@+id/ap_mode_page6_text_3100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ap_mode_page6_text_3200"
		android:layout_alignParentLeft="true"
        android:layout_margin="20dp"
        android:text="@string/ap_mode_page6_text_3100"
        android:textSize="18sp" />
    
    <TextView
        android:id="@+id/ap_mode_page6_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ap_mode_page6_text_3100"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/ap_mode_page6_note"
        android:textSize="16sp" />
        
    <TextView
        android:id="@+id/ap_mode_page6_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/done"
        android:textColor="#CC0000"
        android:textSize="26sp" />
    
</RelativeLayout>
