<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/ap_mode_page4_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ap_mode_page4_title"
        android:textSize="18sp" />
        
    <TextView
        android:id="@+id/ap_mode_page4_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/next"
        android:textColor="#CC0000"
        android:textSize="26sp" />
    
    <TextView
        android:id="@+id/ap_mode_page4_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ap_mode_page4_title"
        android:layout_margin="20dp"
        android:text="@string/ap_mode_page4_text1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ap_mode_page4_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ap_mode_page4_text1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/ap_mode_page4_text2"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/ap_mode_page4_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ap_mode_page4_text2"
       	android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/ap_mode_page4_link"
        android:autoLink="web"
        android:textSize="16sp" />

</RelativeLayout>
