<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/ap_mode_page1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ap_mode_page1_title"
        android:textSize="18sp" />
        
    <TextView
        android:id="@+id/ap_mode_page1_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/next"
        android:textColor="#CC0000"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/ap_mode_page1_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ap_mode_page1_title"
        android:layout_margin="20dp"
        android:text="@string/ap_mode_page1_text1"
        android:textSize="18sp" />
    
    <TextView
        android:id="@+id/ap_mode_page1_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ap_mode_page1_text1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/ap_mode_page1_text2"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/ap_mode_page1_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ap_mode_page1_text2"
        android:contentDescription="@string/ap_mode_page1_title"
        android:src="@drawable/apmode_page1_step1_3200" />

</RelativeLayout>
