<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/tab_smartconfig_view" >

    <TextView
        android:id="@+id/title_smartconfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_smartconfig"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/smartconfig_network_layout"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_below="@+id/title_smartconfig"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#FFF" >

        <TextView
            android:id="@+id/smartconfig_network_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/smartconfig_network_name_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/smartconfig_network_name_field"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/smartconfig_network_name_text"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/smartconfig_network_name_field"
            android:singleLine="true"
            android:gravity="left"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/smartconfig_network_pass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/smartconfig_network_name_text"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/smartconfig_network_pass_text"
            android:textSize="16sp" />
        
        <ImageView
            android:id="@+id/smartconfig_network_pass_eye"
            android:contentDescription="@string/smartconfig_network_pass_text"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_alignBottom="@id/smartconfig_network_pass_text"
            android:layout_toRightOf="@+id/smartconfig_network_pass_text"
            android:layout_marginLeft="2dp"
            android:src="@drawable/eye_icon" />

        <EditText
            android:id="@+id/smartconfig_network_pass_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/smartconfig_network_pass_text"
            android:layout_alignLeft="@+id/smartconfig_network_name_field"
            android:layout_alignRight="@+id/smartconfig_network_name_field"
            android:ems="10"
            android:hint="@string/smartconfig_network_pass_field"
            android:gravity="left"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="32"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/smartconfig_device_name_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/smartconfig_network_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#FFF" >

        <TextView
            android:id="@+id/smartconfig_device_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/smartconfig_device_name_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/smartconfig_device_name_field"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/smartconfig_device_name_text"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/smartconfig_device_name_field"
            android:inputType="text"
            android:digits="0123456789-qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:gravity="left"
            android:singleLine="true"
            android:maxLength="25"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/smartconfig_device_name_explanation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/smartconfig_device_name_layout"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

            <TextView
                android:id="@+id/smartconfig_device_name_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:text="@string/smartconfig_device_name_explanation"
                android:textSize="13sp" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/smartconfig_key_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/smartconfig_device_name_explanation_layout"
        android:layout_centerHorizontal="true"
        android:background="#FFF" >

        <TextView
            android:id="@+id/smartconfig_key_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/smartconfig_key_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/smartconfig_key_field"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/smartconfig_key_text"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/smartconfig_key_field"
            android:gravity="left"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLength="32"
            android:textSize="16sp" >
        </EditText>

        <ImageView
            android:id="@+id/smartconfig_key_button"
            android:contentDescription="@string/outofthebox"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/smartconfig_key_field"
            android:src="@drawable/qr_code" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/smartconfig_progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/smartconfig_key_layout"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:minHeight="5dp"
        android:maxHeight="5dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/smartconfig_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/smartconfig_progressbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/smartconfig_start"
        android:textColor="#CC0000"
        android:textSize="26sp" />

</RelativeLayout>