<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_outofthebox_qrscanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/outofthebox"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/title_qrscanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_outofthebox_qrscanner"
        android:layout_centerHorizontal="true"
        android:text="@string/title_outofthebox_qrscanner"
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="250dp"
        android:layout_height="230dp"
        android:layout_below="@id/title_qrscanner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
    
    <TextView
        android:id="@+id/activity_qrscanner_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:visibility="invisible"
        android:text="@string/next"
        android:textColor="#F00"
        android:textSize="26sp" />

</RelativeLayout>