<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/ap_mode_page3_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ap_mode_page3_title"
        android:textSize="18sp" />
        
    <TextView
        android:id="@+id/ap_mode_page3_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/next"
        android:textColor="#CC0000"
        android:textSize="26sp" />
    
    <TextView
        android:id="@+id/ap_mode_page3_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ap_mode_page3_title"
        android:layout_margin="20dp"
        android:text="@string/ap_mode_page3_text"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/ap_mode_page3_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ap_mode_page3_next"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:contentDescription="@string/ap_mode_page3_title"
        android:src="@drawable/apmode_page3" />

</RelativeLayout>
